[package]
name = "disruptor"
version = "0.0.1-pre"
authors = ["Simon Ruggier <Simon.Ruggier@gmail.com>"]
description = "Fast inter-task communication for Rust"
homepage = "https://github.com/sruggier/rust-disruptor"
repository = "https://github.com/sruggier/rust-disruptor.git"
keywords = ["channels", "message passing", "disruptor"]
license = "MIT/Apache-2.0"

[profile.release]
lto = true

[profile.test]
opt-level = 3
lto = true

[profile.bench]
lto = true

[dependencies]
# Until Rust stabilizes, this version requirement will ensure that the code builds with the exact
# version of rustc it has been tested against.
time = "=0.1.3"
