[package]
name = "disruptor"
version = "0.0.1-pre"
edition = "2024"
authors = ["Simon Ruggier <Simon.Ruggier@gmail.com>"]
description = "Fast inter-task communication for Rust"
homepage = "https://github.com/sruggier/rust-disruptor"
repository = "https://github.com/sruggier/rust-disruptor.git"
keywords = ["channels", "message passing", "disruptor"]
license = "MIT/Apache-2.0"
rust-version = "1.85.0"

[profile.release]
lto = true

[profile.dev]
opt-level = 3
lto = true

[profile.test]
opt-level = 3
lto = true

[profile.bench]
lto = true

[dependencies]
log = "0.4.28"
getopts = "0.2.14"

[lints.clippy]
let_and_return = "allow"
